2005-02-01  Nektarios K. Papadopoulos  <npapadop@inaccessnetworks.com>

	* FAQ.classlibrary-compile: Added missing information about
	paths to class library profiles.

2005-02-01  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        * javax/security/auth/callback/Callback.java,
        javax/security/auth/callback/CallbackHandler.java,
        javax/security/auth/callback/ChoiceCallback.java,
        javax/security/auth/callback/ConfirmationCallback.java,
        javax/security/auth/callback/LanguageCallback.java,
        javax/security/auth/callback/NameCallback.java,
        javax/security/auth/callback/PasswordCallback.java,
        javax/security/auth/callback/TextInputCallback.java,
        javax/security/auth/callback/TextOutputCallback.java,
        javax/security/auth/callback/UnsupportedCallbackException.java:
        Removed CVS version tags.

2005-01-31  Patryk Laurent  <patryk@pakl.net>

	* FAQ/FAQ.ps2linux: Updated.

2005-01-31  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.
	
	2005-01-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/locale/LocaleHelper.java:
	New utility class.
	(getLocalizedString(java.util.Locale,
	String, String, boolean, boolean)):
	More generic version of what was
	java.util.Locale.getDisplayString, now
	available to all classes.
	* gnu/java/locale/LocaleInformation.java,
	gnu/java/locale/LocaleInformation_aa.java,
	gnu/java/locale/LocaleInformation_aa_ET.java,
	gnu/java/locale/LocaleInformation_af.java,
	gnu/java/locale/LocaleInformation_am.java,
	gnu/java/locale/LocaleInformation_am_ET.java,
	gnu/java/locale/LocaleInformation_ar.java,
	gnu/java/locale/LocaleInformation_as.java,
	gnu/java/locale/LocaleInformation_az.java,
	gnu/java/locale/LocaleInformation_be.java,
	gnu/java/locale/LocaleInformation_bg.java,
	gnu/java/locale/LocaleInformation_bn.java,
	gnu/java/locale/LocaleInformation_byn.java