@@ -1620,13 +1620,11 @@ gnu_regexp_SRCS = \
 	gnu/regexp/CharIndexed.java \
 	gnu/regexp/CharIndexedCharArray.java \
 	gnu/regexp/CharIndexedInputStream.java \
-	gnu/regexp/CharIndexedReader.java \
 	gnu/regexp/CharIndexedString.java \
 	gnu/regexp/CharIndexedStringBuffer.java \
 	gnu/regexp/RE.java \
 	gnu/regexp/REException.java \
 	gnu/regexp/REFilterInputStream.java \
-	gnu/regexp/REFilterReader.java \
 	gnu/regexp/REMatch.java \
 	gnu/regexp/REMatchEnumeration.java \
 	gnu/regexp/RESyntax.java \
@@ -1971,7 +1969,6 @@ java_awt_SRCS = \
 	java/awt/Stroke.java \
 	java/awt/SystemColor.java \
 	java/awt/TextArea.java \
-	java/awt/TextBuffer.java \
 	java/awt/TextComponent.java \
 	java/awt/TextField.java \
 	java/awt/TexturePaint.java \
