@@ -1187,13 +1187,11 @@ gnu/javax/rmi/PortableServer.java
 gnu/regexp/CharIndexed.java
 gnu/regexp/CharIndexedCharArray.java
 gnu/regexp/CharIndexedInputStream.java
-gnu/regexp/CharIndexedReader.java
 gnu/regexp/CharIndexedString.java
 gnu/regexp/CharIndexedStringBuffer.java
 gnu/regexp/RE.java
 gnu/regexp/REException.java
 gnu/regexp/REFilterInputStream.java
-gnu/regexp/REFilterReader.java
 gnu/regexp/REMatch.java
 gnu/regexp/REMatchEnumeration.java
 gnu/regexp/RESyntax.java
@@ -1525,7 +1523,6 @@ java/awt/Shape.java
 java/awt/Stroke.java
 java/awt/SystemColor.java
 java/awt/TextArea.java
-java/awt/TextBuffer.java
 java/awt/TextComponent.java
 java/awt/TextField.java
 java/awt/TexturePaint.java
