@@ -1,3 +1,10 @@
+2005-02-02  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/gnu/regexp/CharIndexedReader.java,
+	libraries/javalib/gnu/regexp/REFilterReader.java,
+	libraries/javalib/java/awt/TextBuffer.java:
+	Removed redundant classes.
+
 2005-02-01  Nektarios K. Papadopoulos  <npapadop@inaccessnetworks.com>
 
 	* FAQ.classlibrary-compile: Added missing information about
